[package]
name = "rs-js"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
imageproc = "0.23.0"
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
web-sys = { version="0.3.64", features=[
  'console',
  'CanvasRenderingContext2d',
  'ImageData',
  'ImageBitmap',
  'WorkerGlobalScope',
  'OffscreenCanvasRenderingContext2d',
  'OffscreenCanvas',
  'Node',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]}

[lib]
crate-type = ["cdylib"]
