[package]
name = "rs-js"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
image = "0.24.7"
imageproc = "0.23.0"
js-sys = "0.3.64"
serde = { version="1.0.190", features = ["derive"] }
serde-wasm-bindgen = "0.6.1"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version="0.3.64", features=[
  'console',
  'CanvasRenderingContext2d',
  'ImageData',
  'Blob',
  'ImageBitmap',
  'WorkerGlobalScope',
  'OffscreenCanvasRenderingContext2d',
  'OffscreenCanvas',
  'Node',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]}

[lib]
crate-type = ["cdylib"]
